sent request activity created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         <activity android:name=".SentRequests" />
         <activity android:name=".RecievedRequests" />
         <activity android:name=".SeeRequestActivity" />
-        <activity android:name=".RequestDetails"></activity>
+        <activity android:name=".RequestDetails" />
+        <activity android:name=".SentReqDetails"></activity>
     </application>
 
 </manifest>
